# guile-websocket

./: .gitignore  Makefile.am  README  base64.scm  configure.ac  guix.scm  pre-inst-env.in  sha-1.scm  test.html  test.scm
tests/: frame.scm
web/socket/: client.scm  frame.scm  server.scm
